// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`map-config Should get /defra-map/config successfully when env is dev 1`] = `
{
  "OS_ACCOUNT_NUMBER": "AC0000807064",
  "agolServiceUrl": "http://localhost:3005/proxy/esri",
  "agolVectorTileUrl": "http://localhost:3005/proxy/esri-tiles",
  "featureLayerNameSuffix": "_NON_PRODUCTION",
  "fmpProxyUrl": "http://localhost:3005",
  "layerNameSuffix": "_NON_PRODUCTION",
  "version": "925617123",
}
`;

exports[`map-config Should get /defra-map/config successfully when env is local 1`] = `
{
  "OS_ACCOUNT_NUMBER": "AC0000807064",
  "agolServiceUrl": "http://localhost:3005/proxy/esri",
  "agolVectorTileUrl": "http://localhost:3005/proxy/esri-tiles",
  "featureLayerNameSuffix": "_NON_PRODUCTION",
  "fmpProxyUrl": "http://localhost:3005",
  "layerNameSuffix": "_NON_PRODUCTION",
  "version": 1770024023142,
}
`;
